--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,11 @@
         tools:targetApi="31" >
 
         <activity
+            android:name=".HomeActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Prueba.NoActionBar"/>
+
+        <activity
             android:name=".LoginActivity"
             android:exported="false"
             android:theme="@style/Theme.Prueba.NoActionBar"/>
